# winsomnia-ssh

./: README.md  pyproject.toml
tests/: test_insomnia_ssh.py
winsomnia_ssh/: prevent_winsleep.py  winsomnia.py  winsomnia_ssh.py
