[tool.poetry]
name = "winsomnia-ssh"
version = "0.1.0"
description = ""
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
winsomnia-ssh = "winsomnia_ssh.winsomnia_ssh:main"
prevent-winsleep = "winsomnia_ssh.prevent_winsleep:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
