[tool.poetry]
name = "winsomnia-ssh"
version = "0.1.0"
description = """\
              winsomnia-ssh prevents Windows from going to sleep \
              while your ssh session is active in WSL. \
              It also provides a simple CLI, `winsomnia`, \
              which allows you to pause sleep whenever you want, \
              for however long you want. \
              """
authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
winsomnia-ssh = "winsomnia_ssh.winsomnia_ssh:main"
winsomnia = "winsomnia_ssh.winsomnia:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
